[project]
name = "cdevents-sdk"
version = "0.0.1"
authors = [
  { name="Erik Sternerson", email="erik@sternerson.se" },
  { name="Evan Elms", email="evanmelms@gmail.com" }
]
description = "The SDK can be used to create CDEvents in CloudEvents form."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/cdevents/sdk-python"
"Bug Tracker" = "https://github.com/cdevents/sdk-python/issues"