[bumpversion]
current_version = 0.0.1

[bumpversion:file:./cdevents/cli/__init__.py]

[metadata]
name = cdevents.cli
description = CDEvents CLI
long_description = file: README.md
version = attr: cdevents.cli.__version__
author = doWhile
author_email = info@dowhile.com
keywords = cdevents, cli
url = todo
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: Other/Proprietary License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
	click>=8.0.4
	pyyaml>=6.0
	click-option-group
	requests
	cloudevents

[options.extras_require]
dev =
	black
	bump2version
	isort
	mypy
	pre-commit
	pydocstyle
	pytest
	pytest_mock
	yamllint
	pylint
build =
	wheel

[options.packages.find]
include =
	cdevents.*

[bdist_wheel]
universal = 0

[options.entry_points]
console_scripts =
	cdevents = cdevents.cli.__main__:cli
