[bumpversion]
current_version = 0.0.1

[bumpversion:file:./cdevents/core/__init__.py]

[metadata]
name = cdevents.core
description = CDEvents Core
long_description = file: README.md
version = attr: cdevents.core.__version__
author = doWhile
author_email = info@dowhile.com
keywords = CDEvents, core
url = todo
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    pytest
    PyYAML
	requests
	cloudevents

[options.extras_require]
dev =
    black
    bump2version
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest_mock
    yamllint
    pylint
    deepdiff
build =
    wheel

[options.packages.find]
include =
    cdevents.*

[bdist_wheel]
universal = 0
