[bumpversion]
current_version = 0.0.1

[bumpversion:file:./cdevents/core/__init__.py]

[metadata]
name = cdevents
description = CDEvents SDK Python
long_description = file: README.md
version = attr: cdevents.__version__
author = cdevents
author_email = info@dowhile.com
keywords = CDEvents, core
url = todo
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    pytest
    pytest-cov
    PyYAML
	requests
	cloudevents

[options.extras_require]
dev =
    black
    bump2version
    isort
    jsonschema
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest-cov
    pytest_mock
    yamllint
    pylint
    deepdiff
build =
    wheel

[options.packages.find]
include =
    cdevents.*

[bdist_wheel]
universal = 0
